Closed Bug 1814872 Opened 1 year ago Closed 1 year ago

fully overlapping radial gradients should render the last stop colour

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: longsonr, Assigned: longsonr)

Details

Attachments

(1 file)

This is a change from SVG 1.1 where we only had to check for r=0 because fr did not exist.

The SVG 2 behaviour was clarified in https://github.com/w3c/svgwg/issues/648

This is a change from SVG 1.1 where we only had to check for r=0 because fr did not exist.

The SVG 2 behaviour was clarified in https://github.com/w3c/svgwg/issues/648

Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Severity: -- → S3
Pushed by longsonr@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/40237e7707f1
Fix degenerate radial gradient handling r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: