Bug 1814872 - Fix degenerate radial gradient handling r=emilio

This is a change from SVG 1.1 where we only had to check for r=0 because fr did not exist.

The SVG 2 behaviour was clarified in https://github.com/w3c/svgwg/issues/648

Differential Revision: https://phabricator.services.mozilla.com/D168783